--- a/Pizzeria/Views/Home/Index.cshtml
+++ b/Pizzeria/Views/Home/Index.cshtml
@@ -1,31 +1,33 @@
-﻿@{
+﻿@using Pizzeria.Models.ViewModels;
+@using Pizzeria.Models.Mongo.Models;
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-8">
+        <hr style="margin-top: 0px" />
+        <h1 class="text-center">Menu</h1>
+        <hr />
+        <div class="list-group">
+            @foreach (Category category in Model.categories)
+            {
+                <a href="#" class="list-group-item h2" data-toggle="collapse" data-target="#@category.name"> @category.name</a>
+                        <div id="@category.name" class="sublinks collapse">
+                            <div class="list-group-item">
+                                djsljglsdfg
+                            </div>
+                        </div>
+            }
+        </div>
+
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div class="panel panel-info">
+            <div class="panel-heading">Order</div>
+            <div class="panel-body">
+                
+            </div>
+        </div>
     </div>
 </div>
