--- a/Pizzeria/Views/Management/Index.cshtml
+++ b/Pizzeria/Views/Management/Index.cshtml
@@ -1,10 +1,31 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Menagement Page";
 }
 
 <div class="row">
     <div class="col-md-8">
-
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#orders" data-toggle="tab" aria-expanded="true">Orders</a></li>
+            <li class=""><a href="#categories" data-toggle="tab" aria-expanded="false">Categories</a></li>
+        </ul>
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade active in" id="orders">
+                <div class="panel-body" style="padding: 0px;">
+                </div>
+            </div>
+        </div>
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade" id="categories">
+                <div class="panel-body" style="padding: 0px;">
+                    <div class="clearfix" style="margin: 5px;">
+                        <div class="pull-right">
+                            <a href="/Song/CreateDraft/" class="btn btn-default">Create new</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
         <div class="panel panel-danger">
