--- a/Pizzeria/Views/Management/Index.cshtml
+++ b/Pizzeria/Views/Management/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Pizzeria.Models.ViewModels;
+@using Pizzeria.Models.Mongo.Models;
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Menagement Page";
 }
@@ -12,10 +14,24 @@
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active in" id="orders">
                 <div class="panel-body" style="padding: 0px;">
+                    <ul class="list-group">
+                                                @foreach (Order order in Model.orders)
+                                                {
+                                                    <li class="list-group-item clearfix">
+                                                        <div class="h4 link pull-left" style="text-decoration: none;">@order.name</div>
+                                                        <div class="pull-right">
+                                                            <a href="#" class="btn btn-default">Delete</a>
+                                                        </div>
+                                                    </li>
+                                                }
+                        @if (Model.orders.Count < 1)
+                        {
+                            <hr />
+                            <h4 class="text-muted">There is no orders.</h4>
+                        }
+                    </ul>
                 </div>
             </div>
-        </div>
-        <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade" id="categories">
                 <div class="panel-body" style="padding: 0px;">
                     <div class="clearfix" style="margin: 5px;">
