--- a/Pizzeria/Views/Home/Index.cshtml
+++ b/Pizzeria/Views/Home/Index.cshtml
@@ -8,43 +8,51 @@
     <div class="col-md-8">
         <hr style="margin-top: 0px" />
         <h1 class="text-center">Menu</h1>
-        <hr />
         <div class="list-group">
             @foreach (Category category in Model.categories)
             {
-                <a href="#" class="list-group-item h2 clearfix" data-toggle="collapse" data-target="#@category.name"> @category.name </a>
-                        <div id="@category.name" class="sublinks collapse">
-                            <div class="list-group-item">
+                <a class="list-group-item h2 clearfix" data-toggle="collapse" data-target="#@category.name" style="margin-top:-1px"> @category.name </a>
+                        <div id="@category.name" class="sublinks in">
+                            <div class="list-group-item" style="background-color:#fafafa">
                                 @if (category.dishes != null)
                                 {
                                     foreach (Dish dish in category.dishes)
                                     {
-                                        <a href="#" class="list-group-item h2" data-toggle="collapse" data-target="#@dish.name.Replace(" ", String.Empty)"> @dish.name</a>
+                                        <a class="list-group-item h3" data-toggle="collapse" data-target="#@dish.name.Replace(" ", String.Empty)" style="margin-top:-1px"> @dish.name <span class="pull-right h4"> Price:&nbsp;&nbsp;@dish.price</span><p class="h6">@dish.description</p></a>
                                         <div id="@dish.name.Replace(" ", String.Empty)" class="sublinks collapse">
                                             <div class="list-group-item">
                                                 <form class="form-horizontal">
                                                     <fieldset>
                                                         <div class="form-group">
-                                                            <div class="col-lg-4 col-lg-offset-1">
-                                                                <select class="form-control" id="select">
-                                                                    <option>1</option>
-                                                                    <option>2</option>
-                                                                    <option>3</option>
-                                                                    <option>4</option>
-                                                                    <option>5</option>
-                                                                </select>
+                                                            <div class="col-lg-6">
+                                                                <label class="col-lg-2 control-label">Quantity:</label>
+                                                                <div class="col-lg-9 col-lg-offset-1">
+                                                                    <select class="form-control" id="select">
+                                                                        <option>1</option>
+                                                                        <option>2</option>
+                                                                        <option>3</option>
+                                                                        <option>4</option>
+                                                                        <option>5</option>
+                                                                    </select>
+                                                                </div>
                                                             </div>
-                                                            <div class="col-lg-4 col-lg-offset-3">
-                                                                <button type="submit" class="btn btn-primary">Add to cart</button>
+                                                            <div class="col-lg-2 col-lg-offset-2">
+                                                                <button type="button" class="btn btn-primary">Add to cart</button>
                                                             </div>
-                                                            <div class="col-lg-10">
-                                                                @foreach (Supplement supplement in category.supplements)
-                                                                {
-                                                                    <label>
-                                                                        <input type="checkbox" name="@supplement.name" value="@supplement.name"> @supplement.name - Price: @supplement.price
-                                                                    </label>
-                                                                }
-                                                            </div>
+                                                            @if (category.supplements != null)
+                                                            {
+                                                                <div class="col-lg-10">
+                                                                    <hr />
+                                                                    <h4>Supplements</h4>
+                                                                    <hr />
+                                                                    @foreach (Supplement supplement in category.supplements)
+                                                                    {
+                                                                        <label style="width:100%;">
+                                                                            <input type="checkbox" name="@supplement.name" value="@supplement.name"> @supplement.name  Price: @supplement.price
+                                                                        </label>
+                                                                    }
+                                                                </div>
+                                                            }
                                                         </div>
                                                     </fieldset>
                                                 </form>
@@ -62,19 +70,69 @@
         <div class="panel panel-info">
             <div class="panel-heading">Order</div>
             <div class="panel-body">
-                <ul class="list-group">
-                    <li class="list-group-item clearfix">
-                        <h6 class="pull-left">narudzbina</h6>
-                        <div class="pull-right">
-                            <a href="#" data-toggle="modal" class="btn btn-default">X</a>
+                <form class="form-horizontal">
+                    <fieldset>
+                        <div class="form-group">
+                            <div class="col-lg-12" style="margin-bottom: 5px;">
+                                <label class="col-lg-2 control-label">Name</label>
+                                <div class="col-lg-9">
+                                    <input type="text" class="form-control" id="name" placeholder="Name" />
+                                </div>
+                            </div>
+                            <div class="col-lg-12" style="margin-bottom: 5px;">
+                                <label class="col-lg-2 control-label">Adress</label>
+                                <div class="col-lg-9">
+                                    <input type="text" class="form-control" id="adress" placeholder="Adress" />
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <label class="col-lg-2 control-label">Phone</label>
+                                <div class="col-lg-9">
+                                    <input type="text" class="form-control" id="phone" placeholder="Phone" />
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <a href="#" data-toggle="modal" class="btn btn-default">Order</a>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        <div class="panel panel-info">
+            <div class="panel-heading">Cart</div>
+            <div class="panel-body">
+                <ul class="list-group" style="margin-left:-10px;margin-right:-10px;">
+                    <li class="list-group-item clearfix" style="padding:0px; margin-top:10px;">
+                        <div class="col-lg-12 clearfix" style="padding:0px;">
+                            <div class="col-lg-12" style="padding:0px;background-color:azure;">
+                                <div class="col-lg-12 clearfix h3" data-toggle="collapse" data-target="#dishname" style="text-decoration:none;text;border-bottom:solid 1px #e7e7e7;margin:0px;padding-bottom:4px;padding-top:4px;vertical-align:central;">Name <span class="pull-right"><input type="button" value="X" class="btn btn-default"></span></div>
+                                <div id="dishname" class="col-lg-12 sublinks collapse" style="padding:0px;">
+                                    <a class="list-group-item h4" data-toggle="collapse" data-target="#supplements" style="text-decoration:none; border:none;border-bottom:solid 1px #e7e7e7; margin:0px;"> Supplements </a>
+                                    <div id="supplements" class="col-lg-12 sublinks collapse" style="background-color:#fafafa;padding:0px;">
+                                        <div class="col-lg-12" style="background-color:#fafafa;border-bottom:solid 1px #e7e7e7;">
+                                            <p>SupplementName <span class="pull-right">Price: #price</span></p>
+                                        </div>
+                                        <div class="col-lg-12" style="background-color:#fafafa;border-bottom:solid 1px #e7e7e7;">
+                                            <p>SupplementName <span class="pull-right">Price: #price</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12">
+                                    <h4>Price: <span style="margin-left:20px;"> #price</span><span style="margin-left:80px;"> x #quantity</span></h4>
+                                </div>
+                            </div>
                         </div>
                     </li>
                 </ul>
-                <hr />
-                <h4 class="pull-left">Cena</h4>
-                <div class="pull-right">
-                    <a href="#" data-toggle="modal" class="btn btn-default">Order</a>
-                </div>
+                <form class="form-horizontal">
+                    <fieldset>
+                        <hr style="margin-top: -5px" />
+                        <div>
+                            <h3>Total: <span style="margin-left:20px;"> #price</span></h3>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
         </div>
     </div>
