--- a/Pizzeria/Views/Shared/_Layout.cshtml
+++ b/Pizzeria/Views/Shared/_Layout.cshtml
@@ -35,5 +35,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script type="text/javascript" src="~/Scripts/cart.js"></script>
 </body>
 </html>
