--- a/Pizzeria/Views/Shared/_Layout.cshtml
+++ b/Pizzeria/Views/Shared/_Layout.cshtml
@@ -34,7 +34,6 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-    <script type="text/javascript" src="~/Scripts/cart.js"></script>
+    @RenderSection("JavaScript", required: false)
 </body>
 </html>
