--- a/Pizzeria/Views/Home/Index.cshtml
+++ b/Pizzeria/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                                                             <div class="col-lg-2 col-lg-offset-2">
                                                                 <button type="submit" class="btn btn-primary">Add to cart</button>
                                                             </div>
-                                                            @if (category.supplements != null)
+                                                            @if (category.supplements != null && category.supplements.Count > 0)
                                                             {
                                                                 <div class="col-lg-10">
                                                                     <hr />
